public/css/style.css
.navbar{
    color:rgb(157, 109, 245);
}
.custom-background{
    background-image: url("/images/The-Bolder-5093.jpg"),
    linear-gradient(to bottom right,rgb(102, 115, 116),rgb(236, 240, 37));
    background-size: cover;
    background-position: center;
}

.header-card{
    width: 100%;
    color:#fff;
    margin-top: 10px;
    border-radius: 8px;
    padding: 0.5rem 1rem 1rem 3rem;
    background: rgb(102, 115, 116);
}
.header-card h1, .header-card span{
    margin: 10px;
}
.reservation-list{
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.row{
    display: flex;
    align-items: center;
    justify-content: space-between;
}
table{
    background: #fff;
    padding:1rem;
    text-align: left;
    border-radius: 10px;
}
table th{
    padding: 0.2rem 0.8rem;
    font-size: 15px;
}

.room-card-title{
    text-align:center;
    margin-top: 10px;
}

.custom-btn{
    width: 100px;
}
.dashboard,
.main-page-title{
    color:white;
    text-align: center;
}

.main-page-title{
    padding-bottom: 10px;
}

.custom-header-card,
#booking-title{
    text-align: center;
}
.update-btn{
    padding: 8px 14px;
  background: rgb(116, 17, 173);
  color: #fff;
  text-transform: uppercase;
  margin-right: 1rem;
  cursor: pointer;
}
.delete-btn{
    padding: 8px 14px;
    background: rgb(116, 17, 173);
    color:#fff;
    text-transform: uppercase;
    margin-right: 1rem;
    cursor: pointer;

}
#your-reservation{
    text-align: left;
}
button:hover{
    background: rgba(56, 15, 88, 0.5);
    transition: all 0.5s;
}
#reservation-detail{
    float: right;
    margin: left 15px;
    width:50%;
}
.card-title,.card-text{
    color: black;
}



.home_section{
    background-size: cover;
    height: 40vh;
  }
  .overlay{
    height: 100%;
    background: rgba(0, 0, 0, 0.6);
    padding-top: 1rem;
  }

  .home{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
  }
  .home h1{
    padding-top: 3rem;
    font-size: 2.5rem;
    color: #fff;
    text-transform: capitalize;
  }
  .home span{
    color: rgb(228, 151, 8);
    text-align: center;
  }

  input[type="date"],
 select {
      width: 200px; 
      height: 45px; 
      padding: 10px;
  }

    .home span{
      color: rgb(228, 151, 8);
    }
label{
    font-size: 25px;
    color: rgb(228, 151, 8);
}
#book-now,
#check-avail{
   
        display: block; 
        width: 200px; 
        height: 50px; 
        margin: 0 auto; 
        padding: 10px;
        font-size: 16px; 
    
}
#all-bookings-wrapper{
    justify-content: center;
    margin-left: 25%;
    margin-bottom: 15px;
  }
  .booking-form-wrapper {
    width: 100%;
    margin-top: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 50px;
  }
#availability-response{
    color: white;
    text-align: center;
    padding-top: 10px;
    font-size: 30px;
    font-weight: bolder;
}

.about-page-title{
    padding: 15px;
    line-height: 35px;
    text-align: center;
    background-color: rgb(102, 115, 116);
    color: white;
}

